<resources>
    <string name="app_name">SnacksRestrurant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="snacks_time">Snacks Time</string>
    <string name="a_great_snacks_is_minutes_away">A GREAT SNACKS is minutes away</string>
    <string name="register">Register</string>
    <string name="userName">User Name</string>
    <string name="signup">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="mobileNumber">Mobile Numer</string>
    <string name="sing_in_with_mobile">Sign In With Mobile Number</string>
    <string name="Login">Login</string>
    <string name="sendOtp">Send Otp</string>
    <string name="enter_your_mobile_number">enter Your Mobile Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="verify">Verify</string>
    <string name="recovery">Recovery</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="restrurant">Restrurant Name</string>
    <string name="home">home</string>
    <string name="add">Add</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="add_food_items">Food Items</string>
    <string name="dish_name">Dish Name</string>
    <string name="food_description">Food Description</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="hotel_description">Hotel Description</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="postal_address">Postal Address</string>
    <string name="enter_otp_here">Enter otp here</string>
    <string name="description">Description</string>
    <string name="food_menu">Food Menu</string>
</resources>