<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".Buttom.ProfileFragment">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C5000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_padding"
        android:layout_marginEnd="@dimen/layout_padding"
        android:padding="@dimen/drawable_padding"
        app:cardCornerRadius="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="@dimen/other_headings" />

            <ImageView
                android:id="@+id/HotelImg"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/input_gap"
                tools:ignore="ContentDescription"
                android:src="@drawable/ic_image" />

            <TextView
                android:id="@+id/hotelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                android:text="@string/hotel_name" />

            <TextView
                android:id="@+id/HotelDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                android:text="@string/hotel_description" />

            <TextView
                android:id="@+id/Adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                android:text="Adress" />

            <Button
                android:id="@+id/Update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_gap"
                android:backgroundTint="@color/button"
                android:text="@string/update"
                android:visibility="gone" />

            <Button
                android:id="@+id/Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_gap"
                android:backgroundTint="@color/button"
                android:padding="@dimen/button_padding"
                android:text="@string/edit" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>