<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".Buttom.AddFoodFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C5000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_padding"
        android:layout_marginEnd="@dimen/layout_padding"
        android:padding="@dimen/drawable_padding"
        app:cardCornerRadius="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_food_items"
                android:textSize="@dimen/other_headings" />

            <ImageView
                android:id="@+id/FoodImg"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/input_gap"
                android:src="@drawable/ic_image" />

            <EditText
                android:id="@+id/DishName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_gap"
                android:ems="10"
                android:hint="@string/dish_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/FoodDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_gap"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/food_description"
                android:inputType="textMultiLine"
                android:minHeight="100dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="Rs."
                    android:textSize="24sp" />
                <EditText
                    android:id="@+id/foodPrice"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Price"
                    android:inputType="number" />


            </LinearLayout>

            <Button
                android:id="@+id/AddFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_gap"
                android:layout_marginBottom="@dimen/input_gap"
                android:backgroundTint="@color/button"
                android:padding="@dimen/button_padding"
                android:text="@string/add" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>